# nuxnet-inference

./: CHANGELOG.rst  CONFIG_AUDIT.md  Dockerfile  MANIFEST.in  README.md  README.rst  mlf_core.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: publish_container_ghcr.yml  publish_container_ghcr_test.yml  publish_package.yml  publish_pypi_package.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
makefiles/: Linux.mk  Windows.mk
nuxnet_inference_package/: __init__.py  cli_pred.py
nuxnet_inference_package/data/: __init__.py  volume_dataset.py
nuxnet_inference_package/losses/: focal_loss.py
nuxnet_inference_package/metrics/: __init__.py  segmentation.py
nuxnet_inference_package/mlf_core/: __init__.py  reproducibility.py
nuxnet_inference_package/models/: __init__.py  unet.py  unet3d.py
nuxnet_inference_package/utils/: __init__.py
nuxnet_package/: __init__.py  cli_pred.py
nuxnet_package/models/: unet.py
nuxnet_package/utils/: __init__.py
